# c-http-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
.cache/clangd/index/: _OSByteOrder.h.9BDCBB2FA0629CF4.idx  _clock_t.h.C235B91470ED3C2C.idx  _common.h.4F89DA4AD5C63236.idx  _int16_t.h.EBE80161998DDB67.idx  _int32_t.h.31D9AF07D2FDE2F7.idx  _int64_t.h.5F90C740B2CF481D.idx  _int8_t.h.763E831157AD4137.idx  _intmax_t.h.5275E5B2571434EC.idx  _intptr_t.h.21F769BA1C1DBB31.idx  _malloc.h.FF6CFB4F2C0105BA.idx  _null.h.E2C0E57575990DCA.idx  _printf.h.9378DFAFDADFE4E0.idx  _rsize_t.h.2F6937A2264B2036.idx  _size_t.h.E35C3F5BF4A9AE61.idx  _stdio.h.14ECE23B9F3DA95A.idx  _stdio.h.3640F838F329FE00.idx  _stdlib.h.A80A4648F62E106B.idx  _string.h.B205660DA1AEE647.idx  _string.h.B57E8D00A81A4B2A.idx  _strings.h.3A205C5661614021.idx  _strings.h.87B8C05E34042A5B.idx  _time.h.48D2FDB186AFE0DA.idx  _time_t.h.C71341EF9D09FF8C.idx  _timespec.h.3AC18715746F82EF.idx  _types.h.625BE384B8E51906.idx  _types.h.E96F0202D0D06AFA.idx  _uint16_t.h.EC4F663580B0EF0F.idx  _uint32_t.h.470C16B5F1F40483.idx  _uint64_t.h.F7175E8E127FD718.idx  _uint8_t.h.6FAB54822F894F9B.idx  _uintmax_t.h.E1933EB227786EB2.idx  _uintptr_t.h.FB05E78149958A08.idx  _va_list.h.71BCB2F402261A6E.idx  _wchar_t.h.3BF409A87731830B.idx  alloca.h.1B0CFDF955B30CA2.idx  cdefs.h.3E2D4AFBA8737DA0.idx  http_parser.c.F4824FF7ADCA484C.idx  (+23 more)
include/: global_includes.h  http_parser.h  req_handler.h  router.h  server.h  thread_pool.h
src/: http_parser.c  main.c  req_handler.c  router.c  server.c  thread_pool.c
